--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -1,15 +1,26 @@
-name: hello-world
+name: build-test-deploy
 on: push
 jobs: 
-  hello-world-job:
+  build:
     runs-on: ubuntu-latest
     steps: 
-      - name: Check out repository code
+      - name: checkout repo
         uses: actions/checkout@v4
-      - run: echo "$(cat hello_world.txt)"
       - name: use node.js
         uses: actions/setup-node@v4  # GitHub Marketplace 에 있는 action을 사용할 때는 Creator verifed by GitHub 인증이 된 action을 사용 / 혹은 lock the action on the Git SHA https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions
         with: 
           node-version: '18'
       - run: npm install
       - run: npm run build
+  test: # 거의 동일하다. job 은 완전히 독립적이기 때문이다. 불편해 보일 수도 있지만, 다른 runner를 사용하는 등 다양하게 구성할 수 있는 장점도 있다.
+    needs: build # build 라는 이름의 job이 성공적으로 끝나야 test job을 수행하는 것을 의미 / needs keyword를 사용하면 순차적으로 job이 실행
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+      - name: use node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - run: npm install
+      - run: npm test # build는 앞에서 수행했으므로, job의 이름과 같이 test 수행
